Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10210

APPEND, PREPEND, INCR and DECR operations for compressed datatypes need to be handled by uncompressing both existing and delta values and aggregating and compressing the result.

    XMLWordPrintable

Details

    • Untriaged
    • 2
    • June 30 - July 18

    Description

      APPEND, PREPEND, INCR and DECR operations for compressed datatypes need to be handled by uncompressing both existing and delta values and aggregating and compressing the result.
      Steps to reproduce:
      1)Store compressed document.
      2)Append(or one of the mentioned operations) another compressed value to same key.
      3)Server aggregates the two values as is.
      4)Request GET for this key from 2.x client.
      5)Server will try to snappy uncompress and throw exception as the doc in server is composite of two separate compressed docs.
      6)client gets exception and connection is reset.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            parag Parag Agarwal (Inactive)
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty