MB-10210: Handling Appends/Prepends/Incrs/Decrs

- Appends/Prepends:
Handle the scenario where data were compressed
and data being added was not or vice versa.
Return value:
  ENGINE_SUCCESS: if succeeds
  ENGINE_E2BIG:   if new value exceeds limit
  ENGINE_FAILED:  if snappy operations fail, check
                  memory to ensure out-of-memory situation.

- Incrs/Decrs:
Return ENGINE_EINVAL in case of arithmetic operations
on compressed data.

Change-Id: I6f7d8b09e86572e199a8ece9a40fa2afe7669db4
Reviewed-on: http://review.couchbase.org/33587
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>