tests/ep_test_apis.cc
@@ -633,14 +633,14 @@ ENGINE_ERROR_CODE storeCasVb11(ENGINE_HANDLE *h, ENGINE_HANDLE_V1 *h1,
                                const void *cookie, ENGINE_STORE_OPERATION op,
                                const char *key, const char *value, size_t vlen,
                                uint32_t flags, item **outitem, uint64_t casIn,
-                               uint16_t vb, uint32_t exp) {
+                               uint16_t vb, uint32_t exp, uint8_t datatype) {
     item *it = NULL;
     uint64_t cas = 0;
 
     ENGINE_ERROR_CODE rv = h1->allocate(h, cookie, &it,
                                         key, strlen(key),
                                         vlen, flags, exp,
-                                        PROTOCOL_BINARY_RAW_BYTES);
+                                        datatype);
     check(rv == ENGINE_SUCCESS, "Allocation failed.");
 
     item_info info;
